test/type/pass/not_unary.j
class A{
  Void main() {
    Bool a;
    a = !true;
    return;
  }
}
