test/type/fail/var_assign_undeclared_id.j
class A{
  Void main() {
    a = 5;
  }
}
